<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

  <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:text="@string/button_scan"
    android:textSize="20dip"
    android:clickable="true"
    android:onClick="doScanButton"
    />
  <TextView
    android:id="@+id/textview_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/label"/>
  <EditText
    android:id="@+id/edittext_label"
    android:hint="@string/my_btc_address"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />

  <TextView
    android:id="@+id/textview_address"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/address"/>

  <EditText
    android:id="@+id/edittext_address"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"/>

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/button_add"
    android:textSize="20dip"
    android:clickable="true"
    android:onClick="doAddButton"
    />

</LinearLayout>
