<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView
    android:id="@+id/textview_label"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="36dp"
    android:padding="10dip"
    />
<TextView
    android:id="@+id/textview_address"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:gravity="center"
    android:background="@drawable/outer_rectangle_shape"
    android:textStyle="bold"
    android:textColor="#000000"
    android:typeface="monospace"
    />
 <Button
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="10dip"
  android:text="@string/button_show_QR"
  android:textSize="16dp"
  android:clickable="true"
  android:onClick="doQRButton"
  />
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
 <Button
  android:layout_width="0dp"
  android:layout_weight="1"
  android:layout_height="wrap_content"
  android:text="@string/button_edit"
  android:textSize="16dp"
  android:clickable="true"
  android:onClick="doEditButton"
  />
 <Button
  android:layout_width="0dp"
  android:layout_weight="1"
  android:layout_height="wrap_content"
  android:text="@string/button_delete"
  android:textSize="16dp"
  android:clickable="true"
  android:onClick="doDeleteButton"
  />
 </LinearLayout>
</LinearLayout>

